# Antiphon

./: .gitignore  README.md  pyproject.toml
docs/: STATUS.md  proposal.md  results.md  science.md
refs/: URBAN_ANC_HANDOFF.md  urban_anc_simulation.py
scripts/: evaluate_closed_loop.py  generate_training_data.py  make_banner.py  make_game_assets.py  make_results_figures.py  make_walk_demo.py  merge_datasets.py  run_simulation.py  train_model.py
src/antiphon/anc/: __init__.py  fxlms.py
src/antiphon/model/: architecture.py  dataset.py  inference.py  train.py
src/antiphon/simulation/: __init__.py  analytical.py  fdtd.py  geometry.py  materials.py  metrics.py  sources.py
src/antiphon/viz/: __init__.py  field_plot.py  metrics_plot.py
tests/: conftest.py  test_coordinates.py  test_fdtd.py  test_fxlms.py  test_inference.py  test_materials_sources.py  test_model.py  test_parity.py  test_simulation.py
web/game/: game.js  index.html  style.css
