[project]
name = "antiphon"
version = "0.1.0"
description = "Urban active noise cancellation and acoustics foundation model"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "h5py>=3.8",
    "torch>=2.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antiphon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running integration tests"]
